# emergent_behavior_novelty

./: .gitignore  CMakeLists.txt  README.md
analysis/: CMakeLists.txt  analysis.cpp  analysis.h  spread.py
buzz/: emergent_behavior.bzz  state_aggregation.bdb  state_aggregation.bo  state_aggregation.bzz
embedding/: CMakeLists.txt  main.cpp
embedding/mpga/: CMakeLists.txt  main.cpp
experiments/: emergent_behavior.argos  state_aggregation.argos
loop_functions/: CMakeLists.txt  deployment_loop_functions.cpp  deployment_loop_functions.h  emergent_behavior.cpp  emergent_behavior.h  emergent_behavoir.cpp  mpga.cpp  mpga_emergent_behavior_loop_functions.cpp  mpga_emergent_behavior_loop_functions.h
loop_functions/mpga_loop_functions/: CMakeLists.txt  mpga.cpp  mpga.h  mpga_emergent_behavior_loop_functions.cpp  mpga_emergent_behavior_loop_functions.h  mpga_loop_functions.cpp  mpga_loop_functions.h
loop_functions/old_loop_functions/: emergent_behavior.cpp  emergent_behavior.h
scripts/: run_job.sh  submit_jobs.sh
